fixing donage button alignment

--- a/src/components/footers/4/index.styl
+++ b/src/components/footers/4/index.styl
@@ -5,14 +5,13 @@
     align-items: center
     > div
         margin: 0 auto
-        width: 500px
+        max-width: 500px
         text-align: center
-        > span
-            margin-left: 10px
 a
     &.donate
         display inline-block
         padding 10px 20px
+        max-width 200px
         margin 0 0.3em 0.3em 0
         border-radius 2em
         box-sizing border-box
@@ -27,9 +26,3 @@ a
             background-color #4095c6
         &:visited
             color #EEE
-
-@media all and (max-width:30em)
-    a
-        &.donate
-            display block
-            margin 0.2em auto
